# x86-linux-template

./: CMakeLists.txt  README.md
src/: main.cpp
